@@ -1,0 +1,8 @@
+%project=dos
+# This is a note
+
+# And there was a blank line.
+
+hey 2012-07-16T17:25:07Z Barack Obama <potus@whitehouse.gov>
+you 2012-07-16T17:25:07Z Barack Obama <potus@whitehouse.gov>
+whatwhatwhat 2012-07-16T17:25:07Z Barack Obama <potus@whitehouse.gov>
